--- a/templates/products_list.html
+++ b/templates/products_list.html
@@ -8,8 +8,8 @@
     <div class="row">
         {% for product in product_chunks %}
         <div class="col-4">
-            <a href= "{%url 'detail_product' %}"><img src="{{product.image.url}}"></a>
-            <h4>${{ product.title }}</h4>
+            <a href= "{%url 'detail_product' product.id %}"><img src="{{product.image.url}}"></a>
+            <h4>{{ product.title }}</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
@@ -17,7 +17,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star-o"></i>
             </div>
-            <p>{{product.price}}</p>
+            <p>{{product.price}} Rs</p>
         </div>
         {% endfor %}
     </div>
