--- a/templates/account.html
+++ b/templates/account.html
@@ -23,5 +23,14 @@
 
     }
 </script>
+{% if register%}
+<script>
+    register()
+</script>
+{% else %}
+<script>
+    login()
+</script>
+{% endif %}
 {% endblock %}
 {% endblock content %}
