--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,5 +1,13 @@
 {% extends 'blank_layout.html' %}
 
 {% block content %}
-    {% include 'cart_container.html' %}
+{% if messages %}
+    {%for message in messages%}
+         <li class="{{message.tags}}">
+            {{message}} 
+         </li>
+    {% endfor %}
+{% else %}
+{% include 'cart_container.html' %}
+{% endif %}
 {% endblock content %}
