--- a/templates/banner_layout.html
+++ b/templates/banner_layout.html
@@ -5,7 +5,7 @@
         <h1>Give Your Workout <br> A New Style!</h1>
         <p>Success isn't always about greatness. It;s about consistency. Consistent <br> hard work gains
             success. Greatness will come.</p>
-        <a href="" class="btn">Explore Now &#8594;</a>
+        <a href="{%url 'list_product' %}" class="btn">Explore Now &#8594;</a>
     </div>
     <div class="col-2">
         <img src="{%static 'images/image1.png' %}">
