--- a/templates/menu.html
+++ b/templates/menu.html
@@ -13,6 +13,7 @@
             {% endif %}
             {%if user.is_authenticated %}
             <li><a href="{%url 'logout' %}">Logout</a></li>
+            <li><a href="{%url 'orders' %}">Orders</a></li>
         </ul>
     </nav>
     <a href="{%url 'cart' %}"><img src="{%static 'images/cart.png' %}" width="30px" height="30px"></a>
