--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,22 +1,24 @@
 {% load static %}
 <div class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="{%static 'images/logomain.png' %}" alt="logo" width="125px"></a>
+        <a href="{% url 'home' %}"><img src="{% static 'images/logomain.png' %}" alt="logo" width="150px" height="100px"></a>
     </div>
     <nav>
         <ul id="MenuItems">
-            <li><a href="{%url 'home' %}">Home</a></li>
-            <li><a href="{%url 'list_product' %}">Products</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'list_product' %}">Products</a></li>
 
-            {% if not user.is_autherticated %}
-            <li><a href="{%url 'account' %}">Account</a></li>
+            {% if not user.is_authenticated %}
+                <li><a href="{% url 'account' %}">Account</a></li>
             {% endif %}
-            {%if user.is_authenticated %}
-            <li><a href="{%url 'logout' %}">Logout</a></li>
-            <li><a href="{%url 'orders' %}">Orders</a></li>
-        </ul>
-    </nav>
-    <a href="{%url 'cart' %}"><img src="{%static 'images/cart.png' %}" width="30px" height="30px"></a>
-    {%endif%}
-    <img src="{%static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'orders' %}">Orders</a></li>
+                <Li><a href="{% url 'cart' %}">Cart<img src="{% static 'images/cart.png' %}" width="30px" height="25px"></a></Li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+                <li class ="btn">{{ user.username }}</li>
+            </ul>
+        </nav>
+            {% endif %}
+
+    <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
 </div>
